// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a job 1`] = `
Object {
  "createdAt": 1970-01-18T06:50:10.019Z,
  "description": "The developer job everyone wants.",
  "source": "Job Board",
  "updatedAt": 1970-01-18T06:50:10.019Z,
}
`;

exports[`should get one a stored job 1`] = `
Object {
  "createdAt": "1493410",
  "description": "The developer job everyone wants.",
  "source": "Job Board",
  "updatedAt": "1493410",
}
`;
